--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2255,7 +2255,22 @@ p a:hover {
   border-radius: 30px;
   text-transform: capitalize;
   white-space: nowrap;
-  min-width: 70px;
+  min-width: 90px;
+  text-align: center;
+}
+.status_btn_danger {
+  display: inline-block;
+  padding: 2px 15px;
+  font-size: 11px;
+  font-weight: 300;
+  color: #fff !important;
+  background: red;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+  text-transform: capitalize;
+  white-space: nowrap;
+  min-width: 90px;
   text-align: center;
 }
 .status_btn.yellow_btn {
