Formatting code and final Major Push

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -10114,7 +10114,6 @@ a.pswp__share--download:hover {
   }
 }
 
-.navbar_bg
-{
-      background-color: #fbf6f0;
+.navbar_bg {
+  background-color: #fbf6f0;
 }
